<resources>
    <string name="app_name">Daily Excercise</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="confirm_exit">Tap back button again to exit app</string>

    <!-- Tab -->
    <string name="tab_luyentap">Luyện Tập</string>
    <string name="tab_lichtap">Lịch Tập</string>
    <string name="tab_baitap">Bài Tập</string>
    <string name="tab_mangxahoi">Mạng Xã Hội</string>

    <!-- Home Fragment -->
    <string name="home_title">Home Fragment</string>

    <!-- Activity Fragment -->
    <string name="activity_title">Activity Fragment</string>

    <!-- Training Fragment -->
    <string name="training_title">Training Fragment</string>

    <!-- Map Fragment -->
    <string name="map_title">Map Fragment</string>
    <string name="title_activity_start_fragment">StartFragment</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_pairing_fragment">PairingFragment</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="title_activity_tranning">TranningActivity</string>
    <string name="title_activity_bai_tap_di_bo">BaiTapDiBoActivity</string>
    <!--Drawable-->
    <string name="open">DailyExcercise</string>
    <string name="close">Bye</string>

    <string name="token_builder">Bearer %s</string>

    <string name="error_network_server_timeout">Request timeout</string>
    <string name="error_network_no_internet">No internet connection</string>
    <string name="error_network_request_fail">Request fail</string>
    <string name="error_network_auth_failure_error">Auth failure error</string>
    <string name="error_network_error">Request error</string>
    <string name="error_parse_json">Can not get data</string>

    <!-- Drawer Menu -->
    <string name="drawer_event">EVENT</string>
    <string name="drawer_notification">NOTIFICATION</string>
    <string name="drawer_message">MESSAGE</string>
    <string name="drawer_profile">PROFILE</string>
    <string name="drawer_logout">LOGOUT</string>
    <string name="drawer_content_empty" />

    <!-- Forgot Password -->
    <string name="txtemail">Email</string>
    <string name="tvForgot">Will we send you a reset password link to your inbox</string>
    <string name="btnForgot">Forgot</string>

    <!-- Login -->
    <string name="edtPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="tvSingupHere">SignUp here</string>
    <string name="title_activity_message">Message</string>
    <string name="title_activity_bai_tap_giam_can">BaiTapGiamCanActivity</string>
    <string name="title_activity_tao_chuong_trinh_giam_can">TaoChuongTrinhGiamCanActivity</string>
    <string name="title_activity_thong_tin_chuong_trinh_giam_can">
        ThongTinChuongTrinhGiamCanActivity
    </string>
    <string name="title_activity_chuong_trinh_tang_suc_ben">ChuongTrinhTangSucBenActivity</string>


</resources>
